[project]
name = "ml-guard"
version = "0.1.0"
description = "Production-grade ML Quality Gate platform"
authors = [
    {name = "Antigravity", email = "antigravity@example.com"},
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.9",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "joblib>=1.3.0",
    "rich>=13.7.0",
    "plotly>=5.18.0",
    "shap>=0.44.0",
    "fairlearn>=0.10.0"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
